# GunED

./: CMakeLists.txt  GunED.pro  LEGAL.txt  LICENSE  README.md  airmsg.cpp  airmsg.h  gunspec.xml  gunspecreader.cpp  gunspecreader.h  gunspectest.txt  gunspecxmlreader.cpp  gunspecxmlreader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  propertyfield.h  propertywidget.cpp  propertywidget.h
